--- a/packages/android_alarm_manager_plus/android/src/main/AndroidManifest.xml
+++ b/packages/android_alarm_manager_plus/android/src/main/AndroidManifest.xml
@@ -1,1 +1,3 @@
-<manifest package="dev.fluttercommunity.plus.androidalarmmanager" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="dev.fluttercommunity.plus.androidalarmmanager">
+</manifest>
